--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/node,macos,windows,visualstudiocode
+packages/frontend/package-lock.json
