--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,4 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/node,macos,windows,visualstudiocode
 packages/frontend/package-lock.json
+*.docx
