--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,10 +1,9 @@
 {
   "dependencies": {
-    "@koa/cors": "^2.2.3",
-    "axios": "^0.18.0",
-    "koa": "^2.7.0",
-    "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0"
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "node-fetch": "^2.4.1",
+    "path": "^0.12.7"
   },
   "scripts": {
     "start": "node server.js"
