--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,7 +3,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "node-fetch": "^2.4.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.88.0"
   },
   "scripts": {
     "start": "node server.js"
