--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,5 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/node,macos,windows,visualstudiocode
 packages/frontend/package-lock.json
+packages/backend/package-lock.json
+packages/backend/yarn.lock
