--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -6,6 +6,7 @@
 		"axios": "^0.18.0",
 		"corfu": "^1.0.11",
 		"prop-types": "^15.7.2",
+		"query-string": "^6.5.0",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
 		"react-scripts": "2.1.8",
@@ -26,5 +27,6 @@
 		"not dead",
 		"not ie <= 11",
 		"not op_mini all"
-	]
+	],
+	"proxy": "http://localhost:8080"
 }
