--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,6 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/node,macos,windows,visualstudiocode
 packages/backend/db.json
+*.sql
+*.txt
+*.csv
