--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@babel/core": "7.2.2",
 		"@material-ui/core": "^3.9.3",
+		"@material-ui/icons": "^4.2.1",
 		"@svgr/webpack": "4.1.0",
 		"babel-core": "7.0.0-bridge.0",
 		"babel-eslint": "9.0.0",
