--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,6 +6,7 @@
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "node-fetch": "^2.4.1",
+    "nodemailer": "^6.3.0",
     "path": "^0.12.7",
     "request": "^2.88.0"
   },
