--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -54,6 +54,7 @@
 		"react-dom": "^16.8.6",
 		"react-icons": "^3.7.0",
 		"react-router-dom": "^5.0.0",
+		"react-select": "^3.0.4",
 		"reset-css": "^4.0.1",
 		"resolve": "1.10.0",
 		"sass-loader": "7.1.0",
