--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-session": "^1.16.2",
     "hash.js": "^1.1.7",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "node-fetch": "^2.4.1",
     "nodemailer": "^6.3.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "request": "^2.88.0"
   },
