수정: 툴팁박스 오늘 하루 보이지 않기 설정

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -50,6 +50,7 @@
 		"query-string": "^6.8.2",
 		"react": "^16.8.6",
 		"react-app-polyfill": "^0.2.2",
+		"react-cookie-consent": "^2.5.0",
 		"react-day-picker": "^7.3.0",
 		"react-dev-utils": "^8.0.0",
 		"react-dom": "^16.8.6",
