--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -12,7 +12,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "session-file-store": "^1.3.1"
   },
   "scripts": {
     "start": "node server.js"
