--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -36,6 +36,7 @@
 		"jest-resolve": "23.6.0",
 		"jest-watch-typeahead": "^0.2.1",
 		"lodash.debounce": "^4.0.8",
+		"lodash.throttle": "^4.1.1",
 		"mini-css-extract-plugin": "0.5.0",
 		"mobx": "^5.10.1",
 		"mobx-react": "^6.1.1",
