--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
@@ -13,7 +14,9 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "request": "^2.88.0",
-    "session-file-store": "^1.3.1"
+    "session-file-store": "^1.3.1",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.1"
   },
   "scripts": {
     "start": "node server.js"
