수정: 불필요한 파일 삭제 및 .gitignore 내용 수정

--- a/.gitignore
+++ b/.gitignore
@@ -156,5 +156,9 @@ packages/backend/db.json
 *.csv
 
 
-#session
+# session
 sessions/*
+
+# Eject
+packages/frontend/config
+packages/frontend/scripts
