--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,32 +1,36 @@
 {
-  "dependencies": {
-    "app-root-path": "^3.0.0",
-    "connect-flash": "^0.1.1",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "express-session": "^1.16.2",
-    "hash.js": "^1.1.7",
-    "moment": "^2.24.0",
-    "mysql": "^2.17.1",
-    "node-fetch": "^2.4.1",
-    "nodemailer": "^6.3.1",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "path": "^0.12.7",
-    "request": "^2.88.0",
-    "session-file-store": "^1.3.1",
-    "winston": "^3.2.1",
-    "winston-daily-rotate-file": "^4.4.1"
-  },
-  "scripts": {
-    "start": "node server.js"
-  },
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "devDependencies": {},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+	"dependencies": {
+		"app-root-path": "^3.0.0",
+		"connect-flash": "^0.1.1",
+		"cors": "^2.8.5",
+		"express": "^4.16.4",
+		"express-session": "^1.16.2",
+		"hash.js": "^1.1.7",
+		"moment": "^2.24.0",
+		"mysql": "^2.17.1",
+		"node-fetch": "^2.4.1",
+		"nodemailer": "^6.3.1",
+		"passport": "^0.4.0",
+		"passport-local": "^1.0.0",
+		"path": "^0.12.7",
+		"request": "^2.88.0",
+		"session-file-store": "^1.3.1",
+		"winston": "^3.2.1",
+		"winston-daily-rotate-file": "^4.4.1"
+	},
+	"scripts": {
+		"start": "node server.js",
+		"test": "jest --watchAll"
+	},
+	"name": "backend",
+	"version": "1.0.0",
+	"main": "server.js",
+	"devDependencies": {
+		"jest": "^25.2.7",
+		"supertest": "^4.0.2"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": ""
 }
