추가 : 유닛테스트 작성 관련 문서 작성 및 테스트 코드 일부 수정

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -23,13 +23,9 @@
 	},
 	"scripts": {
 		"start": "node server.js",
-		"watch": "NODE_ENV=test jest --setupFiles dotenv/config --watch --runInBand --detectOpenHandles --forceExit"
+		"test": "NODE_ENV=test jest --setupFiles dotenv/config --watch --runInBand --detectOpenHandles --forceExit"
 	},
 	"name": "backend",
-	"jest": {
-		"verbose": true,
-		"testEnvironment": "node"
-	},
 	"version": "1.0.0",
 	"main": "server.js",
 	"devDependencies": {
