[회원가입] query table명 수정, nodemailer 옵션 수정

--- a/.gitignore
+++ b/.gitignore
@@ -155,6 +155,10 @@ packages/backend/db.json
 *.txt
 *.csv
 
-
 # session
 sessions/*
+
+# debug log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
