--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
 		"app-root-path": "^3.0.0",
+		"bcryptjs": "^2.4.3",
 		"connect-flash": "^0.1.1",
 		"cors": "^2.8.5",
 		"cross-env": "^7.0.2",
