--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	"scripts": {
 		"backend": "nodemon packages/backend/server",
 		"frontend": "cd packages/frontend && npm start",
-		"dev": "concurrently \"npm run backend\" \"npm run frontend\""
+		"dev": "concurrently \"npm run backend\" \"npm run frontend\"",
+		"test": "exit"
 	},
 	"repository": {
 		"type": "git",
