추가: deploy설정 추가

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,10 @@ notifications: # 성공 실패 여부 알림
     email:
         recipients:
             - tomorrowcho@gmail.com
+deploy:
+    - provider: codedeploy
+      access_key_id: $AWS_ACCESS_KEY
+      secret_access_key: $AWS_SECRET_KEY
+      application: nyangterest-app
+      deployment_group: nyangterest-deploy-group
+      region: ap-northeast-2
