--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"backend": "nodemon packages/backend/server",
 		"frontend": "cd packages/frontend && npm start",
 		"dev": "concurrently \"npm run backend\" \"npm run frontend\"",
+		"build": "npm install --prefix packages/frontend && npm run build --prefix packages/frontend",
 		"test": "exit"
 	},
 	"repository": {
