--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_deploy: # 배포하기전 하는 작업들
   - rm -rf packages/frontend/node_modules
   - rm -rf packages/backend/node_modules
   - zip -r nyangterest * 
-  - mkdir -p deploy # deploy 라는 디렉터리를 만듬
+  - mkdir -p deploy # deploy 라는 디렉터리를 만듦
   - mv nyangterest.zip deploy/nyangterest.zip # deploy 디렉터리로 nyangterest.zip 파일을 이동
 deploy: # 배포
   - provider: s3 # AWS S3를 의미
@@ -38,8 +38,8 @@ deploy: # 배포
     bucket: nyangterest # AWS CodeDeploy가 다운로드 받은 버킷
     key: nyangterest.zip # 해당 버킷에 저장되어 있는 파일 이름
     bundle_type: zip # 버킷에 저장되어 있는 파일의 확장자
-    application: ci-cd-nyangterest-code-deploy-service # AWS 배포 애플리케이션
-    deployment_group: ci-cd-deploy-group # AWS 배포 애플리케이션에 만들어져 있는 배포 그룹
+    application: nyangterest-app # AWS 배포 애플리케이션
+    deployment_group: ci-cd-nyangterest-group # AWS 배포 애플리케이션에 만들어져 있는 배포 그룹
     region: ap-northeast-2
     wait-until-deployed: true
     on:
