--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"dependencies": {
 		"concurrently": "^4.1.0",
+		"nodemailer": "^6.4.11",
 		"nodemon": "^1.19.0"
 	},
 	"devDependencies": {},
